# stable-storage

./: .gitignore  Cargo.toml  README.md  dfx.json
scripts/: build.sh
src/stable_storage/: Cargo.toml  stable_storage.did
src/stable_storage/src/: error.rs  lib.rs  storage.rs
