[package]
name = "stable_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0"}
candid = "0.10"
ic-cdk = "0.16"
ic-stable-structures = "0.6.5"
thiserror = "1.0.40"
# ciborium = "0.2.1"
